	  Aimonen.
	* apps/examples/modbus:  Fixes from Freddie Chopin
	* apps/examples/modbus/Kconfig: Kconfig logic for FreeModBus contributed
	  by Freddie Chopin.
	* Makefile, */Makefile:  Various fixes for Windows native build.  Now uses
	  make foreach loops instead of shell loops.
	* apps/examples/elf/test/*/Makefile: OSX doesn't support install -D, use
	  mkdir -p then install without the -D.  From Mike Smith.
	* apps/examples/relays/Makefile: Reduced stack requirement (Darcy Gong).
	* apps/nshlib and apps/netutils/dhcpc:  Extend the NSH ifconfig command plus
	  various DHCPC improvements(Darcy Gong).
	* apps/nshlib/nsh_apps.c: Fix compilation errors when CONFIG_NSH_DISABLEBG=y.
	  From Freddie Chopin.
	* Rename CONFIG_PCODE and CONFIG_FICL as CONFIG_INTERPRETERS_PCODE and
	  CONFIG_INTERPRETERS_FICL for consistency with other configuration naming.
	* apps/examples/keypadtest:  A keypad test example contributed by Denis
	  Carikli.
	* apps/examples/elf and nxflat:  If CONFIG_BINFMT_EXEPATH is defined, these
	  tests will now use a relative path to the program and expect the binfmt/
	  logic to find the absolute path to the program using the PATH variable.

6.25 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* Makefiles: Removed dependency of distclean on clean in most top-level
	  files.  It makes sense for 'leaf' Makefiles to have this dependency,
	  but it does not make sense for upper-level Makefiles.
	* namedapp/: Renamed to builtins in preparation for another change.
	* .context:  Removed the .context kludge.  This caused lots of problems
	  when changing configurations because there is no easy way to get the
	  system to rebuild the context.  Now, the context will be rebuilt
	  whenever there is a change in either .config or the Makefile.
	* builtin/registry:  Updated new built-in registration logic to handle
	  cases where (1) old apps/.config is used, and (2) applications ared
	  removed, not just added.
